@@ -11,7 +11,7 @@ should not be generated.}
 \value{A Parser Function that will delete items from the outer
 Documentation List.}
 
-\author{Inlinedocs development team with contributions from R Core Team}
+\author{Toby Dylan Hocking <toby@sg.cs.titech.ac.jp> [aut, cre], Keith Ponting [aut], Thomas Wutzler [aut], Philippe Grosjean [aut], Markus Müller [aut], R Core Team [ctb, cph]}
 
 
 
