@@ -14,7 +14,7 @@ the result will be returned.}
 
 \value{A Parser Function.}
 
-\author{Inlinedocs development team with contributions from R Core Team}
+\author{Toby Dylan Hocking <toby@sg.cs.titech.ac.jp> [aut, cre], Keith Ponting [aut], Thomas Wutzler [aut], Philippe Grosjean [aut], Markus Müller [aut], R Core Team [ctb, cph]}
 
 
 
